--- a/src/twoxproject/users/templates/users/logout.html
+++ b/src/twoxproject/users/templates/users/logout.html
@@ -7,11 +7,11 @@
 <link rel ="stylesheet" href ="{% static 'main.css' %}" type="text/css">
 
 <div class="container text-center">
-    <div id="full-row" class = "row justify-content-center align-items-center vh-100">
+    <div id="full-row" class = "row justify-content-center align-items-center">
         
         <div class="col-lg-3 col-md-4 div-morphism ">
             <h3>You have been Logged out</h3>
-            <a href="{%url 'users:login'%}" class="btn-morphism">Login</a>
+            <a class="btn btn-success" href="{%url 'users:login'%}">Login</a>
         </div>
     </div>
 </div>
