--- a/src/twoxproject/templates/base.html
+++ b/src/twoxproject/templates/base.html
@@ -6,18 +6,25 @@
     <title>2xProject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel ="stylesheet" href ="{% static 'main.css' %}" type="text/css">
+    <!-- autocomplete for step title-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
+
    </head> 
    <body>
    {% include 'navbar_home.html' %}
    <div class="container">
+      <div class = "row justify-content-center align-items-center">
       {% if messages %}
       {% for message in messages %}
       <div class="div-morphism alert alert-{{message.tags}}">{{message}}</div>
       {% endfor %}
       {% endif %}
-   </div>
+      </div>
     {% block content %}
     {% endblock %} 
+   </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
    </body>
 </html>
