--- a/src/twoxproject/templates/home.html
+++ b/src/twoxproject/templates/home.html
@@ -4,25 +4,13 @@
 {% block content %}
 <link rel ="stylesheet" href ="{% static 'main.css' %}" type="text/css">
 
-<div class="container">
+<div class="container-home text-center">
   {% if messages %}
   {% for message in messages %}
   <div class="alert alert-{{message.tags}}">{{message}}</div>
   {% endfor %}
   {% endif %}
-  <div class="row justify-content-md-center">
-    <div class="col-4 col-center">
-      <p>step 1 = 1 euro</p>
-      <p>step 2 = 2 euro</p>
-      <p>step 3 = 4 euro</p>
-      <p>step 4= 8 euro</p>
-      <p>.</p>
-      <p>.</p>
-      <p>.</p>
-      <p>step 32 = 1.000.000 euro</p>
-
-    </div>
-  </div>
+  <img src="{% static "media/home-background.jpg" %}" alt="2xproject" width="45%" height="45%">
 
 
 </div>
