--- a/src/twoxproject/users/templates/users/login.html
+++ b/src/twoxproject/users/templates/users/login.html
@@ -8,19 +8,15 @@
 
 <div class="container text-center">
     <div class = "row justify-content-center align-items-center">
-        {% if messages %}
-        {% for message in messages %}
-        <div class=" div-morphism alert alert-{{message.tags}}">{{message}}</div>
-        {% endfor %}
-        {% endif %}
         <div class="col-lg-3 col-md-4 div-morphism ">
             <h3 class="title-h3">Log in</h3>
             <form action = "" method = "POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-morphism">Log in</button>
+                <button type="submit" class="btn btn-success">Log in</button>
               </form>
         </div>
     </div>
+    
 </div>
 {%endblock %} 
