--- a/src/twoxproject/users/templates/users/register.html
+++ b/src/twoxproject/users/templates/users/register.html
@@ -7,14 +7,14 @@
 <link rel ="stylesheet" href ="{% static 'main.css' %}" type="text/css">
 
 <div class="container text-center">
-    <div id="full-row" class = "row justify-content-center align-items-center vh-100">
+    <div id="full-row" class = "row justify-content-center align-items-center">
         
         <div class="col-lg-3 col-md-4 div-morphism ">
             <h3 class="title-h3">Sign in</h3>
-            <form action = "{}" method = "POST">
+            <form action = "{% url 'users:register' %}" method = "POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-morphism">Sign up</button>
+                <button type="submit" class="btn btn-success">Sign up</button>
               </form>
         </div>
     </div>
